# xray-core-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
xray_bin/: Cargo.toml
xray_bin/src/: main.rs  parse.rs
xray_bin/src/logger/: console.rs  crash.rs  mod.rs
xray_ffi_android/: Cargo.toml  build.rs  uniffi.toml
xray_ffi_android/src/: lib.rs  logger.rs  xray.udl
xray_ffi_ios/: Cargo.toml  cbindgen.toml
xray_lib/: Cargo.toml  build.rs
xray_lib/src/: lib.rs
xray_lib/src/common/: address.rs  buffer.rs  buffer_manager.rs  constants.rs  header.rs  hex.rs  md5.rs  mod.rs  net_location.rs  safe_bytes_mut.rs  session_manager.rs  udp.rs  utils.rs  uuid.rs  vec.rs
xray_lib/src/common/geo/: mod.rs
xray_lib/src/config/: config.rs  log.rs  mod.rs  stats.rs
xray_lib/src/core/: context.rs  dispatcher.rs  inbound.rs  io.rs  mod.rs  outbound.rs  security.rs  session.rs  statistics_manager.rs  stream.rs  streams.rs  transport.rs
xray_lib/src/core/router/: config.rs  group_conditions.rs  mod.rs  not_match_matcher.rs  router.rs
xray_lib/src/core/router/domain/: full_domain_matcher.rs  geo_domain_matcher.rs  mod.rs  partial_matcher.rs  regular_expression_matcher.rs  sub_domain_matcher.rs
xray_lib/src/core/router/ip/: cidr_matcher.rs  geo_ip_matcher.rs  mod.rs
xray_lib/src/core/router/network/: mod.rs
xray_lib/src/core/router/port/: mod.rs
xray_lib/src/core/router/protocol/: mod.rs
xray_lib/src/core/sniffer/: mod.rs
xray_lib/src/core/sniffer/protocols/: dns.rs  http.rs  mod.rs  quic.rs  tls.rs
xray_lib/src/inbound/: mod.rs  nat_manager.rs
xray_lib/src/inbound/http/: config.rs  mod.rs  protocol.rs
xray_lib/src/inbound/socks/: config.rs  mod.rs  udp.rs
xray_lib/src/inbound/tun/: config.rs  mod.rs  nat_manager.rs
xray_lib/src/outbound/: mod.rs
xray_lib/src/outbound/block/: mod.rs
xray_lib/src/outbound/direct/: mod.rs
xray_lib/src/outbound/quinn_hysteria2/: config.rs  handler.rs  mod.rs  salamander.rs  tcp_stream.rs  udp.rs  udp_api.rs  udp_stream.rs  varint.rs
xray_lib/src/outbound/quinn_tuic/: config.rs  handler.rs  mod.rs  tcp_stream.rs  udp_api.rs  udp_stream.rs
xray_lib/src/outbound/quinn_tuic/protocol/: authenticate.rs  connect.rs  dissociate.rs  enums.rs  heartbeat.rs  mod.rs  packet.rs
xray_lib/src/outbound/shadowsocks/: cipher_aead.rs  cipher_none.rs  cipher_tcp_aead_2022.rs  cipher_udp_aead_2022.rs  config.rs  mod.rs  protocol.rs  tcp.rs  udp.rs  udp_over_tcp_version_1.rs  udp_over_tcp_version_2.rs
xray_lib/src/outbound/socks5/: config.rs  mod.rs  protocol.rs  tcp.rs  udp.rs
xray_lib/src/outbound/stats/: mod.rs
xray_lib/src/outbound/trojan/: config.rs  mod.rs
xray_lib/src/outbound/vless/: config.rs  flow.rs  mod.rs  mux.rs  util.rs  xtls.rs
xray_lib/src/outbound/vmess/: config.rs  kdf.rs  mod.rs  protocol.rs
xray_lib/src/outbound/vmess/aead/: aes.rs  helper.rs  mod.rs
xray_lib/src/protos/: mod.rs  router.proto  router.rs  vless-addons.proto  vless_addons.rs
xray_lib/src/security/: mod.rs
xray_lib/src/security/reality/: config.rs  mod.rs  tls.rs  verify.rs  xtls.rs
xray_lib/src/security/tls/: config.rs  mod.rs  tls.rs  tls_new.rs  verify.rs  xtls.rs
xray_lib/src/stream/: mod.rs
xray_lib/src/stream/exact/: curent.b  mod.rs  pending.b
xray_lib/src/stream/fragment/: config.rs  mod.rs
xray_lib/src/transport/: mod.rs
xray_lib/src/transport/grpc/: config.rs  mod.rs
xray_lib/src/transport/http2/: config.rs  mod.rs
xray_lib/src/transport/http_hpgrade/: mod.rs
xray_lib/src/transport/http_upgrade/: config.rs  mod.rs
xray_lib/src/transport/tcp/: config.rs  mod.rs
xray_lib/src/transport/websocket/: config.rs  mod.rs
xray_lib/src/transport/xhttp/: chunk_stream.rs  config.rs  http_unify.rs  mod.rs  protocol.rs
xray_scripts/: build_android.sh  (+3 more)
(+7 files in other folders)
