[package]
name = "xray_ffi_android"
version = "0.1.0"
edition = "2021"

[lib]
name = "xray_ffi_android"
crate-type = ["lib", "cdylib"]

[dependencies]
xray_lib = { path = "../xray_lib" }
uniffi = { version = "0.30.0", features = ["cli"] }
once_cell = "1.21.1"
jni = "0.21.1"
log = { version = "0.4.29", features = ["std"] }
chrono = "0.4.42"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
