[package]
name = "xray_lib"
version = { workspace = true }
edition = { workspace = true }



[lib]
name = "xray_lib"
path = "src/lib.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
bitvec = { version = "1.0.1", features = [] }
bytes = "1.5.0"
chacha20poly1305 = "0.10.1"
futures-util = "0.3.29"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = { version = "1.8.1", features = ["v4"] }
http = "1.0.0"
regex = "1.12.2"
generic-array = "1.3.5"
sha2 = "0.10.8"
rand = { version = "0.8.5", features = ["default"] }
md-5 = "0.10.5"
async-trait = "0.1.74"
dns-message-parser = "0.9.0"
byteorder = "1.5.0"
hmac = "0.12.1"
hkdf = "0.12.3"
crc32fast = "1.3.2"
sha256 = "1.4.0"
webpki-roots = "1.0.4"
serde_json = { version = "1.0.145", features = ["raw_value"] }
futures = "0.3.30"
h2 = { version = "0.4.2" }
prost = "0.14.1"
tls-parser = "0.12.2"
lazy_static = "1.5.0"
base64 = "0.22.1"
chacha20 = "0.9.1"
sha1 = "0.10.6"
convert_case = "0.10.0"
cidr = "0.3.0"
protobuf = { version = "3.7.2", features = ["with-bytes"] }
tokio-rustls = { version = "0.26.4" }
blake3 = "1.8.2"
quinn-proto = { version = "0.11.13", default-features = false }
blake2 = "0.11.0-pre.5"
digest = "0.10.7"
socket2 = "0.6.1"

s2n-quic-core = "=0.69.0"
s2n-quic-crypto = "=0.69.0"
s2n-codec = "=0.69.0"
s2n-quic = { version = "=1.69.0", features = ["provider-tls-rustls", "unstable-provider-datagram", "provider-event-tracing"] }
s2n-quic-platform = "=0.69.0"
quinn = { version = "0.11.9", default-features = false, features = ["log", "platform-verifier", "aws-lc-rs", "runtime-tokio", "rustls-aws-lc-rs"] }
h3-quinn = "0.0.10"
h3 = "0.0.8"

reality-tokio-rustls = { git = "https://github.com/pmdev92/reality-tokio-rustls.git", rev = "859502a987c0d108f37d1ab895e2691599ea2923" }
reqwest = { version = "0.12.28", default-features = false, features = ["stream"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
http-body-util = "0.1.3"
tokio-stream = "0.1.17"
chrono = "0.4.42"
form_urlencoded = "1.2.2"
once_cell = "1.21.3"
hickory-resolver = "0.26.0-alpha.1"

[build-dependencies]
protobuf-codegen = "3.4.0"

